[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/HUD/Control.gd" type="Script" id=1]
[ext_resource path="res://scenes/InputBar/InputBar.tscn" type="PackedScene" id=2]

[node name="Control" type="CanvasLayer" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )
bpm = 120.0

[node name="BPM" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 0.25
one_shot = true
autostart = false

[node name="InputBar" parent="." index="1" instance=ExtResource( 2 )]

anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 324.0
margin_top = 350.0
margin_right = 344.0
margin_bottom = 140.0
rect_min_size = Vector2( 1300, 510 )
rect_scale = Vector2( 0.5, 0.5 )
_sections_unfolded = [ "Rect", "Size Flags", "custom_constants" ]

[connection signal="timeout" from="BPM" to="." method="up_beat"]

[connection signal="beat" from="InputBar" to="." method="down_beat"]


